--- a/package.json
+++ b/package.json
@@ -12,20 +12,20 @@
   "dependencies": {
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.0",
-    "expo": "~44.0.0",
-    "expo-status-bar": "~1.2.0",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-native": "0.64.3",
-    "react-native-web": "0.17.1",
-    "expo-image-picker": "~12.0.1",
-    "expo-location": "~14.0.1",
-    "react-native-maps": "0.29.4",
-    "expo-sqlite": "~10.1.0",
+    "expo": "^51.0.0",
+    "expo-status-bar": "~1.12.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.74.5",
+    "react-native-web": "~0.19.10",
+    "expo-image-picker": "~15.0.7",
+    "expo-location": "~17.0.1",
+    "react-native-maps": "1.14.0",
+    "expo-sqlite": "~14.0.6",
     "expo-app-loading": "~1.3.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.24.0"
   },
   "private": true
 }
